<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_jserror"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_vertical|center_horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/jsErrorTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="30dp"
            android:text="@string/title_activity_jserror"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="33sp" />

        <TextView
            android:id="@+id/jsErrorEmoji"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:textAlignment="center"
            android:textSize="33sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:lineSpacingExtra="12sp"
            android:padding="30dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/a_jserror_text"
            android:textAlignment="center"
            android:textColor="@color/white_overlay"
            android:textSize="22sp" />

        <Button
            android:id="@+id/jsErrorButtonWebView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white_overlay"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/a_jserror_button"
            android:textColor="@color/background_moro_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/jsErrorTextLogIntro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:lineSpacingExtra="12sp"
            android:padding="30dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/a_jserror_text2"
            android:textAlignment="center"
            android:textColor="@color/white_overlay"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/jsErrorTextLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="monospace"
            android:gravity="center"
            android:lineSpacingExtra="12sp"
            android:padding="30dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:textAlignment="center"
            android:textColor="@color/white_overlay"
            android:textIsSelectable="true"
            android:textSize="22sp" />

        <Button
            android:id="@+id/jsErrorButtonFeedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white_overlay"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/a_jserror_button2"
            android:textColor="@color/background_moro_color"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>
