<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ImageView
        android:id="@+id/versioNoteBackgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:scaleType="centerCrop"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:fillViewport="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/popupMainText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center|center_vertical|center_horizontal"
                android:singleLine="false"
                android:text="@string/d_update_text"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white_light"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/versioNoteImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_below="@+id/popupMainText"
                android:layout_centerHorizontal="true"
                android:padding="20dp"
                android:scaleType="centerCrop"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/showAgainContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/versioNoteImage"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <CheckBox
                    android:id="@+id/showAgain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/d_server_msg_show_again"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white_light" />

            </LinearLayout>

            <TextView
                android:id="@+id/showAgainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/showAgainContainer"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:text="@string/d_server_msg_show_again_info"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white_light"
                android:visibility="gone" />

            <Button
                android:id="@+id/linkbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/showAgainText"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:text="@string/d_server_msg_link"
                android:textColor="@color/white_light"
                android:textSize="20sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linkbutton"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:text="@string/d_update_oK"
                android:textColor="@color/white_light"
                android:textSize="20sp" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
